
* Lexicon (lexicon.txt) and Welcome files (xx/start.txt)
  - [Mar 10, 99] Some changes in Italian version (by Raffaele Sena).

* Documentation
  - [Mar 18, 99] Swedish version updated (Lars Gustavsson).
  - [Mar 17, 99] Changed documentation for the new feature "automatic choice"
    for the "death state" (see above), file "update.htm", section 5.4 "modify
    a person", paragraph "Death".

GeneWeb Version 2.00
--------------------

From the version 2.00, the license is GPL (GNU General Public
License). The previous license still applies up to the version 1.11
included.

* GeneWeb daemon/CGI (gwd)
  - [Mar 7, 99] Added ability to enter directly birth dates for children
    in families forms.
  - [Feb 27, 99] Added case "half-siblings" in relationship links.
  - [Feb 27, 99] In personal pages, titles dates when complete are
    displayed completely (not just date).
  - [Feb 26, 99] For a birth the present day, does not display "happy
    birthday" any more! And displayed age is "birth" and not "less than
    one year".
  - [Feb 26, 99] Displaying of first name alias in personal pages does
    not include the surname any more.
  - [Feb 23, 99] In non leap years, birthday anniversaries of February 29
    are counted and celebrated March 1.
  - [Feb 19, 99] Replacement of "%s" by the name of the base with context,
    also in family comment.
  - [Feb 18, 99] Added deletion of photos.
  - [Feb 13, 99; Feb 20, 99] Added ability to send photos.
  - [Feb 12, 99] Improved displaying in Hebrew language.
  - [Feb 8, 99] Fixed bug in CGI mode under Windows: images (flags e.g.) 
    were often truncated.

* Gedcom to GeneWeb (ged2gwb)
  - [Feb 14, 99] Assumed wrongly that all families were defined after
    individuals, because it is often the case in Gedcom files. But this is
    not mandatory in definition Gedcom 5.5. Fixed.
  - [Feb 6, 99] Accept dates with "/" (20/11/1993) although it is not
    standard Gedcom 5.5. Interpreted as day/month/year.
