@@ -1,4 +1,4 @@
-(* $Id: phonygwd.ml,v 2.1 1999-03-08 11:19:04 ddr Exp $ *)
+(* $Id: phonygwd.ml,v 2.2 1999-03-24 16:31:12 ddr Exp $ *)
 (* Copyright (c) 1999 INRIA *)
 
 value port_selected = ref 2317;
@@ -57,7 +57,7 @@ value main () =
        return exit 1
      else ();
      close_in (open_in fname.val);
-     Wserver.f port_selected.val 0 (Some 4) connection;
+     Wserver.f port_selected.val 0 (Some 4) (None, None) connection;
   return ()
 ;
 
